--- a/index.html
+++ b/index.html
@@ -4,49 +4,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Adventures in JavaScript</title>
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>Simple Character Counter</title>
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
 
   <body>
     <div class="container">
-        <h1>Adventures in JavaScript</h1>
-        <h2>A simple word counter</h2>
-        <p>Add some text in the textbox below and click the button to see how many words you have written.</p>
+        <h1>Simple Character Counter</h1>
+        <p>Add some text in the textbox below and click the button to see how many characters you have written.</p>
         <textarea name="name" rows="8" cols="40"></textarea><br>
         <button class="btn btn-default" type="button" name="button">Count characters</button>
-        <p>Number of words typed: <span id="results">0</span></p>
+        <p>Number of characters typed: <span id="results">0</span></p>
     </div>
 
-    <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
-    </script>
-    <!-- Bootstrap -->
-    <script src="js/bootstrap.min.js"></script>
-    <!-- Scripts -->
+    <!-- jQuery CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Bootstrap JavaScript CDN -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    
+    <!-- My scripts -->
     <script type="text/javascript">
         $(document).ready(function(){
-            // when button clicked
+            // button clicked
             $('button').click(function(){
                 var text = $('textarea').val(); // get text from textarea
-                var wordCount = wordCounter(text); // count number of words in text
-                $("#results").text(wordCount);
+                var charCount = charCounter(text); // count number of words in text
+                $("#results").text(charCount);
             });
-            function wordCounter(words) {
-                var count = 0;
-                for (var i = 0; i < words.length; i++) {
-                    if (words[i] != " ") {
-                        count++;
-                    }
+            function charCounter(text) {
+                var charCount = 0;
+                for (var i = 0; i < text.length; i++) {
+                        charCount++;
                 };
-                return count;
+                return charCount;
             }
         });
     </script>
