--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     
     <!-- Scripts -->
-    <script type="text/javascript" src="js/script.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
