Add word count functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <p>Add some text in the textbox below and click the button to see how many characters you have written.</p>
         <textarea name="name" rows="8" cols="40"></textarea><br>
         <button class="btn btn-default" type="button" name="button">Count characters</button>
-        <p>Number of characters typed: <span id="results">0</span></p>
+        <br><br>
+        <p id="results"></p>
     </div>
 
     <!-- jQuery CDN -->
