--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Simple Character Counter</title>
+    <title>Simple Word Counter</title>
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   </head>
 
   <body>
     <div class="container">
-        <h1>Simple Character Counter</h1>
-        <p>Add some text in the textbox below and click the button to see how many characters you have written.</p>
+        <h1>Simple Word Counter</h1>
+        <p>Add some text in the textbox below and click the button to see how many words there are.</p>
         <textarea name="name" rows="8" cols="40"></textarea><br>
         <button class="btn btn-default" type="button" name="button">Count characters</button>
         <br><br>
