--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="container">
         <h1>Simple Word Counter</h1>
         <p>Add some text in the textbox below and click the button to see how many words there are.</p>
-        <textarea name="name" rows="8" cols="40"></textarea><br>
+        <textarea name="name" rows="8" cols="40"></textarea>
+        <br><br>
         <button class="btn btn-default" type="button" name="button">Count characters</button>
         <br><br>
         <p id="results"></p>
@@ -23,8 +24,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Bootstrap JavaScript CDN -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    
-    <!-- Scripts -->
+    <!-- JavaScript -->
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
 </html>
