--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <button class="btn btn-default" type="button" name="button">Count characters</button>
         <br><br>
         <p id="results"></p>
+        <hr>
+        <footer>
+            <p>Built by <a href="https://twitter.com/jsstrn">Jesstern Rays</a> and hosted on GitHub.</p>
+        </footer>
     </div>
 
     <!-- jQuery CDN -->
